Finished this project, took around 8 hours of work to match the template. Happy to have finished my first html/css project

--- a/index.html
+++ b/index.html
@@ -37,6 +37,36 @@
     </div>
 
 </div>
+<div class="random">
+    <p id="randominfo"> Some random information.</p>
+    <div class="containers">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+    <ul id="subtext">
+        <li id="sub">this is some subtext <br> under an illustration <br> or image</li>
+        <li id="sub">this is some subtext <br> under an illustration <br> or image</li>
+        <li id="sub">this is some subtext <br> under an illustration <br> or image</li>
+        <li id="sub">this is some subtext <br> under an illustration <br> or image</li>
+    </ul>
+</div>
+
+<div class="quote">
+    <div class="subquote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
+    or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+    <div class="thor">-Thor, God of Thunder</div>
+</div>
+<div class="ad">
+    <div class="bluebox">
+        <div class="call">Call to actions! It's time!</div>
+        <div class="Sign">Sign up for our product by clicking that button right over there!</div>
+        <button class="adbutton"> Sign up</button>
+    </div>
+</div>
+
+<div class="footer">Copyright &copy The Odin Project 2021</div>
     
 </body>
 </html>
